--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.0"
+    "cookie-session": "^1.3.3",
+    "express": "^4.17.0",
+    "mongoose": "^5.5.11",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
