--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "concurrently": "^4.1.0",
+    "concurrently": "^4.1.2",
     "cookie-session": "^1.3.3",
-    "express": "^4.17.0",
+    "express": "^4.17.1",
     "http-proxy-middleware": "^0.19.1",
-    "mongoose": "^5.5.11",
+    "mongoose": "^5.6.13",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
-    "stripe": "^7.4.0"
+    "sendgrid": "^5.2.3",
+    "stripe": "^7.8.0"
   }
 }
